menu items to open, move to trash and open in finder/explorer when right-clicking on link in folder view